2006-07-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/multiequal.spice-sdb: Updated golden file to take into
	account case change of .end

	* tests/amp.spice-sdb, tests/darlington.spice-sdb: Updated golden
	file to take into account case change of .end

2006-04-22 Carlos Nieves Onega <cnieves@iespana.es>
	
	* include/globals.h, include/prototype.h, src/g_netlist.c, 
	  src/g_register.c, src/globals.c, s_netlist.c, s_traverse.c:
	  Build a netlist of graphical objects. This feature enables
	  using directives in the schematic.
	
        * scheme/gnet-drc2.scm: 
	    - Added support for NoConnection and DontCheckPintypes directives.
	    - Changed the drc connection matrix. Now an unknown pin doesn't 
              generate an error, and it can drive a net.
            - Added report for pins without the 'pintype' attribute.
	    - Display the pins when reporting a net with only one connection.
	
2006-04-11 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-spice-sdb.scm: Changed .END and .ENDS cards to lowercase.
	This fixes bug 1442912.

2006-04-05 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-drc2.scm: Fixed parenthesis mismatch in 
	function drc2:check-slots. 
	Thanks to David Logan for reporting the bug.

2006-03-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gnetlistrc.in: Removed load for the system-gafrc file,
	since it is loaded by libgeda first.

2006-03-10 Stuart Brorson <sdb [AT] cloud9 [DOT] net>
	* scheme/gnet-spice-sdb.scm: Added "m" attribute to PMOS and NMOS
	transistors per request of Peter Kaiser. 
	
2006-03-06 Carlos Nieves Onega <cnieves@iespana.es>

        * src/g_netlist.c: Return 'pwr' when getting pintype of a hidden
	pin. Thanks to Holger Oehm for providing the patch.
	
2006-03-03 Stuart Brorson <sdb [AT] cloud9 [DOT] net>
	* configure.ac, parsecmd.c: introduced getopt_long to enable
	parsing of long command line flags.  Had to change configure.ac
	to support looking for getopt.h instead of unistd.h.
	