@@ -187,7 +187,7 @@ SCM g_rc_hierarchy_netname_separator(SCM name)
               SCM_ARG1, "hierarchy-netname-separator");
 
   if (default_hierarchy_netname_separator) {
-    free(default_hierarchy_netname_separator);
+    g_free(default_hierarchy_netname_separator);
   }
 
   default_hierarchy_netname_separator = g_strdup (SCM_STRING_CHARS (name));
@@ -201,7 +201,7 @@ SCM g_rc_hierarchy_netattrib_separator(SCM name)
               SCM_ARG1, "hierarchy-netattrib-separator");
 
   if (default_hierarchy_netattrib_separator) {
-    free(default_hierarchy_netattrib_separator);
+    g_free(default_hierarchy_netattrib_separator);
   }
 
   default_hierarchy_netattrib_separator = g_strdup (SCM_STRING_CHARS (name));
@@ -215,7 +215,7 @@ SCM g_rc_hierarchy_uref_separator(SCM name)
               SCM_ARG1, "hierarchy-uref-separator");
 
   if (default_hierarchy_uref_separator) {
-    free(default_hierarchy_uref_separator);
+    g_free(default_hierarchy_uref_separator);
   }
 
   default_hierarchy_uref_separator = g_strdup (SCM_STRING_CHARS (name));
@@ -262,7 +262,7 @@ SCM g_rc_unnamed_netname(SCM name)
               SCM_ARG1, "unamed-netname");
 
   if (default_unnamed_netname) {
-    free(default_unnamed_netname);
+    g_free(default_unnamed_netname);
   }
 
   default_unnamed_netname = g_strdup (SCM_STRING_CHARS (name));
