@@ -42,7 +42,7 @@
 
 #define INIT_STR(w, name, str) {                            \
     if ((w)->name) {                                        \
-        free((w)->name);                                    \
+        g_free((w)->name);                                  \
     }                                                       \
     (w)->name = g_strdup (((default_ ## name) != NULL) ?    \
                           (default_ ## name) : (str));      \
