@@ -8,7 +8,7 @@ $PACKAGES
 ! POLARIZED_CAPACITOR! 22uF; C3
 ! POLARIZED_CAPACITOR! 0.1uF; C2
 ! SPST! SPST; S1
-! POLARIZED_CAPACITOR! POLARIZED_CAPACITOR; C1
+! POLARIZED_CAPACITOR! 2200uF; C1
 ! transformer! transformer; T1
 ! LM317! LM317; U2
 ! DIODE-BRIDGE! DIODE-BRIDGE; U1
