@@ -469,7 +469,7 @@ C1
 FOOTPRINT
 unknown
 PARTTYPE
-POLARIZED_CAPACITOR
+2200uF
 DESCRIPTION
 POLARIZED_CAPACITOR
 Part Field 1
