@@ -58,7 +58,7 @@ SPST
 C1
 PATTERN
 POLARIZED_CAPACITOR
-
+2200uF
 
 ]
 [
